Fixed checkstyle issues